# BugJuice

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
cli/: Cargo.toml
cli/.cargo/: config.toml
cli/src/: events.rs  gpu.rs  live.rs  main.rs  polling.rs  processes.rs  storage.rs
lhm-helper/: Program.cs  lhm-helper.csproj
service/: Cargo.toml
service/.cargo/: config.toml
service/src/: emi.rs  lhm_helper.rs  main.rs
src/: App.tsx  api.ts  main.tsx  mock.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  app.manifest  build.rs  nsis-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: battery.rs  commands.rs  events.rs  gpu.rs  lhm.rs  lhm_setup.rs  lib.rs  main.rs  pipe_client.rs  polling.rs  power.rs  power_plan.rs  processes.rs  storage.rs
src/components/: BatteryGauge.tsx  Layout.tsx  Sidebar.tsx
src/hooks/: useApi.ts  useTick.ts
src/pages/: Apps.tsx  Components.tsx  Dashboard.tsx  Health.tsx  Sessions.tsx  Settings.tsx
src/styles/: global.css  theme.css
