[package]
name = "bugjuice-cli"
version = "0.1.0"
edition = "2021"
description = "BugJuice backend prototype — battery + power sensor CLI"

[dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Power",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
rusqlite = { version = "0.33", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
