[package]
name = "bugjuice-svc"
version = "0.4.0-beta"
description = "BugJuice power monitoring service — reads EMI for the main app"
edition = "2021"

[[bin]]
name = "bugjuice-svc"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Services",
    "Win32_System_Threading",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
