[package]
name = "bugjuice"
version = "1.0.2"
description = "BugJuice — battery monitoring and analytics for Windows"
authors = ["DudieBug"]
license = "MIT"
repository = "https://github.com/Dudiebug/BugJuice"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "bugjuice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "image-ico"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls"] }
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Hardware access (matches cli/Cargo.toml)
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Power",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_Pipes",
] }
rusqlite = { version = "0.33", features = ["bundled"] }
libloading = "0.8"
printpdf = "0.7"
wmi = "0.14"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true
